# homer

./: .env  .gitignore  README.md  home.py  homer_inmem.py  homer_persistant.py  main.py  main_streamlit  pyproject.toml  requirements.txt  webui.py
.streamlit/: config.toml
doc/: main.tex
doc/static/schemas/: Scope.drawio  classDiagram.drawio  index.drawio  indexGraph.drawio  projectOverview.drawio  retrieval.drawio  retrievalGraph.drawio
docs/source/: conf.py  index.rst
notebooks/: index_agent.ipynb  retrieval_agent.ipynb
pages/: 1_Discussion.py  2_Report.py  3_Documents.py  4_Configuration.py  5_Models.py
src/: constant.py  env.py  main.py  streamlit_app.py
src/.streamlit/: config.toml
src/config/: config.yaml
src/core/: __init__.py  agents.py  application.py  configuration.py  database.py  db.py  index_graph.py  models.py  prompts.py  report_graph.py  retrieval.py  retrieval_graph.py  simple_query_graph.py  states.py
src/pages/: 1_Discussion.py  3_Documents.py  4_Configuration.py  5_Models.py  config.py  discussion.py  home.py  index.py  models.py  report.py  utils.py
src/parser/: __init__.py  parser.py  utils.py  validation.py  vision_loader.py
src/residu/: database.py
src/resources/: dict_to_pdf.py  prompts.py  utils.py
src/schemas/: __init__.py  configuration.py  database.py  db.py
src/ui/: main_window.py
src/utils/: converter.py  dict_to_pdf.py  logging.py  prompts.py  utils.py
user_data/: chats.db  chats.db-shm  chats.db-wal
user_data/threads/: threads.db  threads.db-shm  threads.db-wal
user_data/vectorstore/: chroma.sqlite3
(+27 files in other folders)
